--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -56,7 +56,7 @@
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextTemp"
                 android:textSize="12sp" />
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextDate"
                 android:textSize="12sp" />
@@ -95,7 +95,7 @@
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextTemp"
                 android:textSize="12sp" />
@@ -114,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextDate"
                 android:textSize="12sp" />
@@ -134,7 +134,7 @@
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextTemp"
                 android:textSize="12sp" />
@@ -153,7 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextDate"
                 android:textSize="12sp" />
@@ -173,7 +173,7 @@
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextTemp"
                 android:textSize="12sp" />
@@ -192,7 +192,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextDate"
                 android:textSize="12sp" />
@@ -212,7 +212,7 @@
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextTemp"
                 android:textSize="12sp" />
@@ -231,7 +231,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextDate"
                 android:textSize="12sp" />
@@ -251,7 +251,7 @@
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextTemp"
                 android:textSize="12sp" />
@@ -270,7 +270,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextDate"
                 android:textSize="12sp" />
@@ -290,7 +290,7 @@
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextTemp"
                 android:textSize="12sp" />
@@ -309,7 +309,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextDate"
                 android:textSize="12sp" />
@@ -329,7 +329,7 @@
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextTemp"
                 android:textSize="12sp" />
@@ -348,7 +348,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:maxLength="5"
-                android:text="@string/empty_row"
+                android:text="@string/tv_date"
                 android:textAlignment="center"
                 android:textColor="@color/colorWidgetTextDate"
                 android:textSize="12sp" />
