--- a/app/src/main/res/xml/widget_metadata.xml
+++ b/app/src/main/res/xml/widget_metadata.xml
@@ -2,9 +2,9 @@
 
 <appwidget-provider
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/widget_layout"
+    android:initialLayout="@layout/widget_troubleshooter"
     android:minWidth="250dp"
-    android:minHeight="40dp"
+    android:minHeight="110dp"
     android:updatePeriodMillis="1800000"
     android:configure="com.orlinskas.cyberpunk.ui.home.ConfigurationWidgetActivity">
 </appwidget-provider>
