--- a/app/src/main/res/layout/widget_troubleshooter.xml
+++ b/app/src/main/res/layout/widget_troubleshooter.xml
@@ -1,46 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/widget_troubleshooter_rl"
+    android:layout_width="match_parent"
+    android:layout_height="160dp">
+
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/widget_troubleshooter_rl"
-        android:layout_width="400dp"
-        android:layout_height="160dp">
+        android:id="@+id/widget_troubleshooter_rl_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:background="@drawable/im_background_widget_3">
 
-        <RelativeLayout
-            android:id="@+id/widget_troubleshooter_rl_background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp"
-            android:background="@drawable/im_background_widgetmdpi">
+    </RelativeLayout>
 
-        </RelativeLayout>
+    <TextView
+        android:id="@+id/widget_troubleshooter_tv_timezone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="15dp"
+        android:fontFamily="monospace"
+        android:text="UTC +3"
+        android:textAlignment="center"
+        android:textColor="@color/colorCyberpunkRed"
+        android:textSize="8sp"
+        android:textStyle="bold" />
+
+    <RelativeLayout
+        android:id="@+id/widget_troubleshooter_rl_clock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="4dp"
+        android:layout_toStartOf="@+id/widget_troubleshooter_im_update_btn">
+
+        <ImageView
+            android:id="@+id/widget_troubleshooter_tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_below="@id/widget_troubleshooter_digital_clock"
+            android:layout_alignParentBottom="false"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="-5dp" />
+
+        <ImageView
+            android:id="@+id/widget_troubleshooter_iv_weather_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@+id/widget_troubleshooter_tv_date"
+            android:layout_marginTop="-7dp"
+            android:layout_marginEnd="10dp"
+            android:layout_toStartOf="@+id/textView2"
+            app:srcCompat="@drawable/ic_803" />
+
+        <TextClock
+            android:id="@+id/widget_troubleshooter_digital_clock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="sans-serif-thin"
+            android:shadowColor="@color/colorCyberpunkGreen"
+            android:shadowRadius="6"
+            android:text="12:00"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/colorCyberpunkWhite"
+            android:textSize="36sp" />
+
+        <TextView
+            android:id="@+id/widget_troubleshooter_tv_weather_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/widget_troubleshooter_tv_date"
+            android:layout_toEndOf="@+id/textView2"
+            android:fontFamily="sans-serif-medium"
+            android:shadowColor="@color/colorCyberpunkRed"
+            android:shadowRadius="4"
+            android:text="+13 C"
+            android:textAlignment="center"
+            android:textColor="@color/colorCyberpunkRed"
+            android:typeface="normal" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/widget_troubleshooter_tv_date"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/widget_troubleshooter_ll_troubleshooter"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_toStartOf="@+id/widget_troubleshooter_im_update_btn"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/widget_troubleshooter_tv_troubleshooter"
+            android:id="@+id/widget_troubleshooter_iv_troubleshooter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="3"
-            app:srcCompat="@drawable/im_trouble_text" />
+            app:srcCompat="@drawable/im_trouble_text_2" />
 
         <LinearLayout
             android:id="@+id/widget_troubleshooter_ll_troubleshoter_icons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -74,99 +157,47 @@
         </LinearLayout>
     </LinearLayout>
 
+    <RelativeLayout
+        android:id="@+id/widget_troubleshooter_rl_city_name"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp">
+
+        <TextView
+            android:id="@+id/widget_troubleshooter_tv_city_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="monospace"
+            android:text="city name "
+            android:textColor="@color/colorCyberpunkRed"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
     <ImageView
         android:id="@+id/widget_troubleshooter_im_update_btn"
         android:layout_width="140dp"
         android:layout_height="38dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="7dp"
         android:layout_marginBottom="5dp"
         app:srcCompat="@drawable/im_update_btn_off" />
 
-    <RelativeLayout
-        android:id="@+id/widget_troubleshooter_rl_clock"
-        android:layout_width="200dp"
-        android:layout_height="70dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+    <ProgressBar
+        android:id="@+id/widget_troubleshooter_pb"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/widget_troubleshooter_rl_background"
+        android:layout_alignParentEnd="false"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:id="@+id/widget_troubleshooter_tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="@font/digit_3"
-            android:shadowColor="@color/colorCyberpunkGreen"
-            android:shadowRadius="2"
-            android:text="03.10.2077"
-            android:textAlignment="center"
-            android:textColor="@color/colorCyberpunkGreen"
-            android:textSize="18sp" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/widget_troubleshooter_rl_weather"
-        android:layout_width="140dp"
-        android:layout_height="50dp"
-        android:layout_above="@+id/widget_troubleshooter_im_update_btn"
-        android:layout_below="@+id/widget_troubleshooter_tv_city_time_zone"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp">
-
-        <ImageView
-            android:id="@+id/widget_troubleshooter_iv_weather_icon"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            app:srcCompat="@drawable/ic_803" />
-
-        <TextView
-            android:id="@+id/widget_troubleshooter_tv_weather_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="5dp"
-            android:layout_toEndOf="@+id/widget_troubleshooter_iv_weather_icon"
-            android:fontFamily="@font/new_zelec"
-            android:text="+20 °C"
-            android:textColor="@color/colorCyberpunkRed"
-            android:textSize="20sp" />
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/widget_troubleshooter_tv_city_name"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:fontFamily="@font/new_zelec"
-        android:shadowColor="@color/colorCyberpunkRed"
-        android:shadowRadius="2"
-        android:text="Cityname"
-        android:textAlignment="center"
-        android:textColor="@color/colorCyberpunkRed" />
-
-    <TextView
-        android:id="@+id/widget_troubleshooter_tv_city_time_zone"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/widget_troubleshooter_tv_city_name"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
-        android:fontFamily="@font/new_zelec"
-        android:shadowColor="@color/colorCyberpunkRed"
-        android:shadowRadius="2"
-        android:text="UTC +3"
-        android:textAlignment="center"
-        android:textColor="@color/colorCyberpunkRed"
-        android:textSize="12sp" />
+        android:layout_marginTop="-7dp"
+        android:layout_marginEnd="30dp"
+        android:indeterminate="true"
+        android:theme="@style/AppTheme.WhiteAccent" />
 
 </RelativeLayout>
