--- a/app/src/main/res/layout/widget_troubleshooter.xml
+++ b/app/src/main/res/layout/widget_troubleshooter.xml
@@ -19,19 +19,6 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/widget_troubleshooter_tv_timezone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="15dp"
-        android:fontFamily="monospace"
-        android:text="UTC +3"
-        android:textAlignment="center"
-        android:textColor="@color/colorCyberpunkRed"
-        android:textSize="8sp"
-        android:textStyle="bold" />
-
     <RelativeLayout
         android:id="@+id/widget_troubleshooter_rl_clock"
         android:layout_width="wrap_content"
@@ -199,5 +186,63 @@
         android:layout_marginEnd="30dp"
         android:indeterminate="true"
         android:theme="@style/AppTheme.WhiteAccent" />
+
+    <TextView
+        android:id="@+id/widget_troubleshooter_tv_warning"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/widget_troubleshooter_rl_city_name"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="5dp"
+        android:text="warning"
+        android:textColor="@color/colorCyberpunkRed"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/widget_troubleshooter_tv_timezone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/widget_troubleshooter_tv_warning"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="5dp"
+        android:text="timezone UTC +3"
+        android:textColor="@color/colorCyberpunkRed"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/widget_troubleshooter_tv_battery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/widget_troubleshooter_tv_timezone"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="5dp"
+        android:text="battery_status"
+        android:textColor="@color/colorCyberpunkRed"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/widget_troubleshooter_tv_wifi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/widget_troubleshooter_tv_battery"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="5dp"
+        android:text="wifi_status"
+        android:textColor="@color/colorCyberpunkRed"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/widget_troubleshooter_tv_precipitation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/widget_troubleshooter_tv_wifi"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="5dp"
+        android:text="precipitation value"
+        android:textColor="@color/colorCyberpunkRed"
+        android:textSize="12sp" />
+
+
+
 
 </RelativeLayout>
